--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
+    "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^1.19.2"
+    "nodemon": "^1.19.2",
+    "style-loader": "^1.0.0"
   }
 }
