--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
