--- a/package.json
+++ b/package.json
@@ -9,31 +9,32 @@
   },
   "private": true,
   "scripts": {
-    "dev-server": "nodemon --exec babel-node src/server/server.js --ignore dist/",
-    "dev-bundle": "webpack -wd"
+    "build": "webpack -d",
+    "watch": "webpack -wd",
+    "start": "webpack-dev-server --open"
   },
   "author": "Brian De Sousa",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/node": "^7.6.1",
-    "@babel/preset-env": "^7.6.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
-    "html-webpack-plugin": "^3.2.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.8"
+    "react-dom": "^16.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/register": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "eslint": "^6.4.0",
     "eslint-plugin-react": "^7.14.3",
-    "nodemon": "^1.19.2",
-    "style-loader": "^1.0.0"
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.1"
   }
 }
