--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "Brian De Sousa",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "classnames": "^2.2.6",
     "express": "^4.17.1",
     "react": "^16.9.0",
