--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack -d",
     "watch": "webpack -wd",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server"
   },
   "author": "Brian De Sousa",
   "license": "ISC",
